--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
 <body>
     <div class="container">
         <h1>Billing Codes Lookup</h1>
+
+        <p class="header-link">
+            To go to the latest Physician's Manual <a href="https://www.gov.mb.ca/health/manual/" target="_blank" rel="noopener noreferrer">click here</a>.
+        </p> 
         
         <div class="controls">
             <div class="control-group">
