--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <p class="header-link">
             To go to the latest Physician's Manual <a href="https://www.gov.mb.ca/health/manual/" target="_blank" rel="noopener noreferrer">click here</a>.
         </p> 
-        
+      <div style="margin-bottom: 12px;"></div>   
         <div class="controls">
             <div class="control-group">
                 <label for="search">Search procedures</label>
