--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <h1>Billing Codes Lookup</h1>
 
         <p class="header-link">
-            To go to the latest Physician's Manual <a href="https://www.gov.mb.ca/health/manual/" target="_blank" rel="noopener noreferrer">click here</a>.
+            <a href="https://www.gov.mb.ca/health/manual/" target="_blank" rel="noopener noreferrer">Click here for the latest Physician Manual</a>.
         </p> 
       <div style="margin-bottom: 12px;"></div>   
         <div class="controls">
