--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 
         <p class="header-link">
           For any feedback or you spot an error please email me!  jonah.shiroky@ggh.mb.ca
-            <a href="https://www.gov.mb.ca/health/manual/" target="_blank" rel="noopener noreferrer">FOR THE LATEST PHYSICIAN MANUAL CLICK HERE</a>
+            
+            <a href="https://www.gov.mb.ca/health/manual/" target="_blank" rel="noopener noreferrer">  Also, to redirect to the latest PHYSICIAN MANUAL click here</a>
         </p> 
       <div style="margin-bottom: 12px;"></div>   
         <div class="controls">
